add details to projects section, add project, link, and language classes to project section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,115 @@
     <h2>Micaela Jawor</h2>
 
     <h3>Projects</h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <p class="project">hello-world</p>
+          <p class="link">Dungeons and Dragons</p>
+          <p>Video Games</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">goodbye-world</p>
+          <p class="link">Creating Chainmail</p>
+          <p>Painting</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">cookie-recipe</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">Cosmo-The-Angry-Fish-Blog</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <p class="project">my-first-webpage</p>
+          <p class="link">Dungeons and Dragons</p>
+          <p>Video Games</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">favorite-places</p>
+          <p class="link">Creating Chainmail</p>
+          <p>Painting</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">Resort-Website</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">css-class-practice</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <p class="project">cupcakes</p>
+          <p class="link">Dungeons and Dragons</p>
+          <p>Video Games</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">boring-lecture</p>
+          <p class="link">Creating Chainmail</p>
+          <p>Painting</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">blog</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">favorite-band</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <p class="project">week-in-review</p>
+          <p class="link">Dungeons and Dragons</p>
+          <p>Video Games</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">vacation</p>
+          <p class="link">Creating Chainmail</p>
+          <p>Painting</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">wiki-page</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+        <div class="col-md-3">
+          <p class="project">Portfolio-Landing-Page</p>
+          <p class="link">Photoshop</p>
+          <p>Cooking</p>
+          <p class="language">HTML + CSS</p>
+        </div>
+      </div>
+    </div>
 
     <h3>About Me</h3>
 
@@ -41,11 +150,6 @@
             <li>SOMETHING ELSE</li>
           </ul>
         </div>
-
-
-
-
-
       </div>
     </div>
 
