Add jumbotron around title and name

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Portfolio Landing Page</title>
   </head>
   <body>
-    <h1>Portfolio Landing Page</h1>
-    <h2>Micaela Jawor</h2>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="title">Portfolio Landing Page</h1>
+        <h2 class="name">Micaela Jawor</h2>
+      </div>
+    </div>
+
 
     <h3>Projects</h3>
     <div class="container">
