Add classes to interests, hobbies,and skills

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="jumbotron">
         <h1 class="title">Portfolio Landing Page</h1>
         <h2 class="name">Micaela Jawor</h2>
+        <img class="image-mj" src="img/picture-of-me.jpg" alt="A picture of Micaela Jawor">
       </div>
     </div>
 
@@ -17,111 +18,216 @@
     <h3>Projects</h3>
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
-          <p class="project">hello-world</p>
-          <p class="link">Dungeons and Dragons</p>
-          <p>Video Games</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">goodbye-world</p>
-          <p class="link">Creating Chainmail</p>
-          <p>Painting</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">cookie-recipe</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">Cosmo-The-Angry-Fish-Blog</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-      </div>
 
-      <div class="row">
         <div class="col-md-3">
-          <p class="project">my-first-webpage</p>
-          <p class="link">Dungeons and Dragons</p>
-          <p>Video Games</p>
-          <p class="language">HTML + CSS</p>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-3">
-          <p class="project">favorite-places</p>
-          <p class="link">Creating Chainmail</p>
-          <p>Painting</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">Resort-Website</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">css-class-practice</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-      </div>
 
-      <div class="row">
         <div class="col-md-3">
-          <p class="project">cupcakes</p>
-          <p class="link">Dungeons and Dragons</p>
-          <p>Video Games</p>
-          <p class="language">HTML + CSS</p>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-3">
-          <p class="project">boring-lecture</p>
-          <p class="link">Creating Chainmail</p>
-          <p>Painting</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">blog</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-        <div class="col-md-3">
-          <p class="project">favorite-band</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
-        </div>
-      </div>
 
-      <div class="row">
         <div class="col-md-3">
-          <p class="project">week-in-review</p>
-          <p class="link">Dungeons and Dragons</p>
-          <p>Video Games</p>
-          <p class="language">HTML + CSS</p>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
         </div>
+
         <div class="col-md-3">
-          <p class="project">vacation</p>
-          <p class="link">Creating Chainmail</p>
-          <p>Painting</p>
-          <p class="language">HTML + CSS</p>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
         </div>
+
         <div class="col-md-3">
-          <p class="project">wiki-page</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
         </div>
+
         <div class="col-md-3">
-          <p class="project">Portfolio-Landing-Page</p>
-          <p class="link">Photoshop</p>
-          <p>Cooking</p>
-          <p class="language">HTML + CSS</p>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
         </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">hello-world</p>
+            </div>
+            <div class="panel-body">
+              <p class="link">Dungeons and Dragons</p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
 
@@ -131,29 +237,35 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <h3>Interests</h3>
-          <ul>
-            <li>Dungeons and Dragons</li>
-            <li>Video Games</li>
-            <li>Fantasy Novels</li>
-          </ul>
+        <div class="interests">
+          <div class="col-md-4">
+            <h3 class="title">Interests</h3>
+            <ul>
+              <li>Dungeons and Dragons</li>
+              <li>Video Games</li>
+              <li>Fantasy Novels</li>
+            </ul>
+          </div>
         </div>
-        <div class="col-md-4">
-          <h3>Hobbies</h3>
-          <ul>
-            <li>Creating Chainmail</li>
-            <li>Painting</li>
-            <li>Digital Art</li>
-          </ul>
+        <div class="hobbies">
+          <div class="col-md-4">
+            <h3 class="title">Hobbies</h3>
+            <ul>
+              <li>Creating Chainmail</li>
+              <li>Painting</li>
+              <li>Digital Art</li>
+            </ul>
+          </div>
         </div>
-        <div class="col-md-4">
-          <h3>Skills</h3>
-          <ul>
-            <li>Photoshop</li>
-            <li>Cooking</li>
-            <li>SOMETHING ELSE</li>
-          </ul>
+        <div class="skills">
+          <div class="col-md-4">
+            <h3 class="title">Skills</h3>
+            <ul>
+              <li>Photoshop</li>
+              <li>Cooking</li>
+              <li>SOMETHING ELSE</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
