--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
 
     <hr>
     <h3>Background</h3>
+    <p class="background title">Education</p>
+    <ul>
+      <li>Highschool</li>
+    </ul>
+    <p class="background title">Job Experience</p>
+    <p class="background title">Why I took a programming course at Epicodus</p>
 
     <hr>
     <div class="container">
@@ -266,7 +272,18 @@
             <ul>
               <li>Photoshop</li>
               <li>Cooking</li>
-              <li>SOMETHING ELSE</li>
+              <li>Making Lists</li>
+                <ol>
+                  <p class="daily-activities-title">Daily Activities</p>
+                  <li>Wake up at <span class="morning">5:45</span><span class="AM">AM</span> to work out</li>
+                  <li>Get ready for class</li>
+                  <li>Take the bus to Downtown Seattle</li>
+                  <li>Practice programming from <span class="morning">8:00</span><span class="AM">AM</span>-<span class="evening">5:00</span><span class="PM">PM</span></li>
+                  <li>Return to apartment via Bus</li>
+                  <li>Go over what I learned that day</li>
+                  <li>Set out my clothes for the next day</li>
+                  <li>Go to sleep no later than <span class="evening">9</span><span class="PM">PM</span></li>
+                </ol>
             </ul>
           </div>
         </div>
