work on background section

--- a/index.html
+++ b/index.html
@@ -235,13 +235,43 @@
     <h3>About Me</h3>
 
     <hr>
-    <h3>Background</h3>
-    <p class="background title">Education</p>
-    <ul>
-      <li>Highschool</li>
-    </ul>
-    <p class="background title">Job Experience</p>
-    <p class="background title">Why I took a programming course at Epicodus</p>
+    <div class="container">
+      <h3>Background</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <p class="background-title">Education</p>
+      <ul>
+        <li>Highschool</li>
+        <ul>
+          <li>Name: Our Lady of Mercy Lauralton Hall</li>
+          <li>Location: Milford, CT</li>
+          <li>Dates Attended: 2007-2011</li>
+        </ul>
+        <li>College</li>
+        <ul>
+          <li>Name: Champlain College</li>
+          <li>Location: Burlington, VT</li>
+          <li>Dates Attended: 2011-2016</li>
+          <li>Degree: Bachelor's Degree in Game Art and Animation</li>
+        </ul>
+
+      </ul>
+
+      <p class="background-title">Job Experience</p>
+
+      <p class="background-title">Why I took a programming course at Epicodus</p>
+
+    </div>
+
 
     <hr>
     <div class="container">
