add names of projects to projects section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">Portfolio-Landing-Page</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -35,7 +35,20 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">wiki-page</p>
+            </div>
+            <div class="panel-body">
+              <p class="link"><a href="#"></a>Dungeons and Dragons</a></p>
+              <p>Video Games</p>
+              <p class="language">HTML + CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <p class="project" class="panel-title">vacation</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -48,7 +61,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">week-in-review</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -61,7 +74,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">favorite-band</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -74,7 +87,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">blog</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -87,7 +100,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">boring-lecture</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -100,7 +113,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">cupcakes</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -113,7 +126,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">css-class-practice</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -126,7 +139,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">Resort_Website</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -139,7 +152,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">favorite-places</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -152,7 +165,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">my-first-webpage</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -165,7 +178,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">Cosmo-The-Angry-Fish-Blog</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -178,7 +191,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">cookie-recipe</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -191,20 +204,7 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
-            </div>
-            <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
-              <p>Video Games</p>
-              <p class="language">HTML + CSS</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="project" class="panel-title">goodbye-world</p>
             </div>
             <div class="panel-body">
               <p class="link">Dungeons and Dragons</p>
@@ -241,32 +241,54 @@
         <div class="col-md-6">
           <div class="panel panel-success">
             <div class="panel-heading">
-
+              <p class="background-title">Education</p>
             </div>
+            <div class="panel-body">
+              <ul>
+                <li>Highschool</li>
+                <ul>
+                  <li>Name: Our Lady of Mercy Lauralton Hall</li>
+                  <li>Location: Milford, CT</li>
+                  <li>Dates Attended: 2007-2011</li>
+                </ul>
+                <li>College</li>
+                <ul>
+                  <li>Name: Champlain College</li>
+                  <li>Location: Burlington, VT</li>
+                  <li>Dates Attended: 2011-2016</li>
+                  <li>Degree: Bachelor's Degree in Game Art and Animation</li>
+                </ul>
+              </ul>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-md-6">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <p class="background-title">Job Experience</p>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li>Highschool</li>
+                <ul>
+                  <li>Name: Our Lady of Mercy Lauralton Hall</li>
+                  <li>Location: Milford, CT</li>
+                  <li>Dates Attended: 2007-2011</li>
+                </ul>
+                <li>College</li>
+                <ul>
+                  <li>Name: Champlain College</li>
+                  <li>Location: Burlington, VT</li>
+                  <li>Dates Attended: 2011-2016</li>
+                  <li>Degree: Bachelor's Degree in Game Art and Animation</li>
+                </ul>
+              </ul>
+            </div>
           </div>
         </div>
 
       </div>
-      <p class="background-title">Education</p>
-      <ul>
-        <li>Highschool</li>
-        <ul>
-          <li>Name: Our Lady of Mercy Lauralton Hall</li>
-          <li>Location: Milford, CT</li>
-          <li>Dates Attended: 2007-2011</li>
-        </ul>
-        <li>College</li>
-        <ul>
-          <li>Name: Champlain College</li>
-          <li>Location: Burlington, VT</li>
-          <li>Dates Attended: 2011-2016</li>
-          <li>Degree: Bachelor's Degree in Game Art and Animation</li>
-        </ul>
-
-      </ul>
-
-      <p class="background-title">Job Experience</p>
 
       <p class="background-title">Why I took a programming course at Epicodus</p>
 
