add pictures to projects section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
               <p class="project" class="panel-title">Portfolio-Landing-Page</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -38,7 +39,8 @@
               <p class="project" class="panel-title">wiki-page</p>
             </div>
             <div class="panel-body">
-              <p class="link"><a href="#"></a>Dungeons and Dragons</a></p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -51,7 +53,8 @@
               <p class="project" class="panel-title">vacation</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -64,7 +67,8 @@
               <p class="project" class="panel-title">week-in-review</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -77,7 +81,8 @@
               <p class="project" class="panel-title">favorite-band</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/music.png" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -90,7 +95,8 @@
               <p class="project" class="panel-title">blog</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -103,7 +109,8 @@
               <p class="project" class="panel-title">boring-lecture</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -116,7 +123,8 @@
               <p class="project" class="panel-title">cupcakes</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -129,7 +137,8 @@
               <p class="project" class="panel-title">css-class-practice</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -142,7 +151,8 @@
               <p class="project" class="panel-title">Resort_Website</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.png" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -155,7 +165,8 @@
               <p class="project" class="panel-title">favorite-places</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/hogwarts.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -168,7 +179,8 @@
               <p class="project" class="panel-title">my-first-webpage</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -181,7 +193,8 @@
               <p class="project" class="panel-title">Cosmo-The-Angry-Fish-Blog</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.png" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -194,7 +207,8 @@
               <p class="project" class="panel-title">cookie-recipe</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -207,7 +221,8 @@
               <p class="project" class="panel-title">goodbye-world</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
@@ -220,7 +235,8 @@
               <p class="project" class="panel-title">hello-world</p>
             </div>
             <div class="panel-body">
-              <p class="link">Dungeons and Dragons</p>
+              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
             </div>
