--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <p class="project" class="panel-title">Portfolio-Landing-Page</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/helipad.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -39,7 +39,7 @@
               <p class="project" class="panel-title">wiki-page</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/wiki.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -53,7 +53,7 @@
               <p class="project" class="panel-title">vacation</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/kangaroo.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -67,7 +67,7 @@
               <p class="project" class="panel-title">week-in-review</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/calendar.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -95,7 +95,7 @@
               <p class="project" class="panel-title">blog</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/blog.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -109,7 +109,7 @@
               <p class="project" class="panel-title">boring-lecture</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/book.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -123,7 +123,7 @@
               <p class="project" class="panel-title">cupcakes</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/cupcake.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -137,7 +137,7 @@
               <p class="project" class="panel-title">css-class-practice</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/css.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -151,7 +151,7 @@
               <p class="project" class="panel-title">Resort_Website</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/mermaid.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -179,7 +179,7 @@
               <p class="project" class="panel-title">my-first-webpage</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/rocket.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -207,7 +207,7 @@
               <p class="project" class="panel-title">cookie-recipe</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/cookie.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -221,7 +221,7 @@
               <p class="project" class="panel-title">goodbye-world</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/goodbye.png" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
@@ -235,7 +235,7 @@
               <p class="project" class="panel-title">hello-world</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive" src="img/hello.jpeg" class="img-rounded" id="Panel_Image">
               <p class="link"><a href="#"></a>click here to view</a></p>
               <p>Video Games</p>
               <p class="language">HTML + CSS</p>
